--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Mirror of git://git.gnome.org/libxml2
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
